Fix bug where profile image was not centered for small screens

--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -62,8 +62,9 @@
     cursor:pointer;
   }
 
-  .fill-height {
-    height:100%;
+  .max-size {
+    max-height:100%;
+    max-width:100%;
   }
 
   .remove-right-margin {
